contact admin card / homepage styles / error message handling on register form

--- a/src/app/commons/Buttons/Buttons.module.scss
+++ b/src/app/commons/Buttons/Buttons.module.scss
@@ -5,6 +5,7 @@
   padding: 12px 32px;
   border-radius: $border-radius-small;
   font-size: $button-fs;
+  font-weight: 700;
   cursor: pointer;
   background-color: $primary;
   color: #fff; 
