--- a/src/app/commons/RegisterForm/RegisterForm.module.scss
+++ b/src/app/commons/RegisterForm/RegisterForm.module.scss
@@ -4,3 +4,12 @@
   max-width: 500px;
   @include d-grid(1fr, auto, 1rem)
 }
+
+.error {
+  @include d-flex(row, center, center, .5rem);
+  padding: 0 .5rem;
+  border: 1px solid $error;
+  border-radius: $border-radius-small;
+  background-color: $error;
+  color: #fff;
+}
