--- a/src/app/commons/LaundryCard/LaundryCard.module.scss
+++ b/src/app/commons/LaundryCard/LaundryCard.module.scss
@@ -5,3 +5,11 @@
   background-color: #fff; 
   border-radius: $border-radius-large;
 }
+
+.info {
+  &__machines {
+    & > * {
+      @include d-flex(row, flex-start, center, .5rem);
+    }
+  }
+}
