--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -5,5 +5,6 @@
   min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: $light-grey-bg;
+  @include d-grid(1fr, 100px auto, null);
+  background-image: url("../app/assets/img/background.png");
 }
