--- a/src/app/commons/Header/Header.module.scss
+++ b/src/app/commons/Header/Header.module.scss
@@ -1,10 +1,14 @@
 @import "src/app/styles/_global.scss";
 
 .container {
-  height: 103px;
+  width: 100%;
+  height:60px;
+  max-width: calc(100vw - 80px);
   @include d-flex(row, null, center, 2rem);
   padding: 20px 40px;
   background-color: #fff;
+  box-shadow: 0px 0px 20px rgba(211, 211, 211, 0.25);
+  position: fixed;
 }
 
 .navContainer {
