--- a/src/app/commons/LaundryCard/LaundryCard.module.scss
+++ b/src/app/commons/LaundryCard/LaundryCard.module.scss
@@ -4,6 +4,7 @@
   padding: 40px;
   background-color: #fff; 
   border-radius: $border-radius-large;
+  box-shadow: 0px 0px 20px rgba(211, 211, 211, 0.25);
 }
 
 .info {
