--- a/src/app/styles/_typo.scss
+++ b/src/app/styles/_typo.scss
@@ -2,3 +2,8 @@
   font-family: "Roboto-regular";
   src: url('../assets/fonts/Roboto/Roboto-Regular.ttf');
 }
+
+@font-face {
+  font-family: "Roboto-bold";
+  src: url('../assets/fonts/Roboto/Roboto-Bold.ttf');
+}
