--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -6,10 +6,13 @@
   max-width: 100vw;
   overflow-x: hidden;
   background-image: url("../app/assets/img/background.png");
-
+  
   h1 {
     @include h1;
+    margin: 0;
   }
 
-
+  a {
+    text-decoration: none;
+  }
 }
