--- a/src/app/commons/CustomInput/CustomInput.module.scss
+++ b/src/app/commons/CustomInput/CustomInput.module.scss
@@ -5,7 +5,7 @@
   input {
     padding: 16px 20px;
     background-color:#fff;
-    border: none; 
+    border: 1px solid $primary; 
     border-radius: $border-radius-small;
   }
   label {
