--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -3,7 +3,7 @@
 $title-fs:        56px;   // title
 $h1-fs:           40px;   // h1
 $h2-fs:           32px;   // h2
-$subTitle-fs:     24px;   // subTitle
+$subtitle-fs:     24px;   // subTitle
 
 $body-large-fs:   20px;   // large
 $body-bold-fs:    16px;   // bold
