styles attributes items on profile machine component

--- a/src/app/commons/ContactAdmin/ContactAdmin.module.scss
+++ b/src/app/commons/ContactAdmin/ContactAdmin.module.scss
@@ -9,7 +9,9 @@
   border-radius: $border-radius-large;
   color: #fff;
 }
-
+.title {
+  color:#fff !important;
+}
 .phone {
   font-weight: bold;
 }
