--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -17,7 +17,8 @@ $button-fs:       14px;   // text button
 
 // background
 
-$light-grey-bg: #F6F6F6;                       
+$light-grey-bg: #F6F6F6;   
+$light-blue-bg       : #F9FCFF;             
 
 // primary 
 
