--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -5,11 +5,13 @@
   min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
-  background-image: url("../app/assets/img/background.png");
+  // background-image: url("../app/assets/img/background.png");
+  background-color: $light-blue-bg;
   
   h1 {
     @include h1;
     margin: 0;
+    
   }
   h2 {
     @include h2;
@@ -23,4 +25,10 @@
   a {
     text-decoration: none;
   }
+
+  p, h1, h2, h3 {
+    word-wrap: break-word;
+  }
+
+
 }
