--- a/src/app/pages/Register/Register.module.scss
+++ b/src/app/pages/Register/Register.module.scss
@@ -1,11 +1,20 @@
 @import "src/app/styles/_global.scss";
 
 .container {
-  @include d-flex(row, space-around, center, null);
+  @include d-flex(row, space-around, flex-start, 120px);
 }
 
 .brands {
+  display: none;
+  @include m {
+    display: initial;
+  }
   img {
-    width: 500px;
+    width:100%;
+    max-width: 500px;
+  }
+
+  &__title {
+    max-width: 760px;
   }
 }
