--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -86,3 +86,15 @@
   letter-spacing: -0.25px;
   color: #000000;
 }
+
+@mixin body-bold {
+  font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 165%;
+
+/* or 26px */
+
+color: #000000;
+}
