--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -10,25 +10,32 @@
   
   h1 {
     @include h1;
-    margin: 0;
-    
+    margin-bottom: 1rem;
   }
   h2 {
     @include h2;
-    margin: 0;
+    margin-bottom: .8rem;
   }
   h3 {
     @include subtitle;
-    margin: 0;
+    margin-bottom: .5rem;
   }
 
   a {
     text-decoration: none;
   }
 
-  p, h1, h2, h3 {
+  p, h1, h2, h3, span {
     word-wrap: break-word;
   }
+  p {
+    margin: 0;
+  }
 
+    h1, h2, h3, h4 {
+      margin-top: 0;
+      margin-left: 0;
+      margin-right: 0;
+    }
 
 }
