--- a/src/app/commons/ContactAdmin/ContactAdmin.module.scss
+++ b/src/app/commons/ContactAdmin/ContactAdmin.module.scss
@@ -1,8 +1,9 @@
 @import "src/app/styles/_global.scss";
 
 .container {
+  width: calc(100% - 80px);
   padding: 40px;
-  @include d-flex(column, center, center, null);
+  @include d-flex(column, center, center, .8rem);
   line-height: 28.8px;
   text-align: center;
   background: $primary;
