--- a/src/app/pages/MachineProfile/MachineProfile.module.scss
+++ b/src/app/pages/MachineProfile/MachineProfile.module.scss
@@ -9,8 +9,13 @@
 }
 
 .attributes {
-  @include d-grid(1fr 1fr, 1fr 1fr, null);
-  @include gap(20px, 40px);
+  @include d-grid(1fr, 1fr 1fr 1fr, 20px);
+  @include m {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    @include gap(20px, 40px);
+  }
+  
   &__item {
     @include d-flex(row, flex-start, center, 2rem);
     background: $light-grey-bg;
