--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -39,3 +39,9 @@
     }
 
 }
+
+// prevent scroll while a modal is open
+.ReactModal__Body--open,
+.ReactModal__Html--open {
+  overflow: hidden;
+}
