--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -88,7 +88,7 @@
 }
 
 @mixin body-bold {
-  font-family: Roboto;
+font-family: "Roboto-bold";
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
