--- a/src/app/commons/Module/Module.module.scss
+++ b/src/app/commons/Module/Module.module.scss
@@ -1,7 +1,7 @@
 @import "src/app/styles/_global.scss";
 
 .container {
-  width: calc(100% - 40px);
+  width: 100%;
   background-color: #fff;
   border-radius: $border-radius-large;
   box-shadow: 0px 0px 20px rgba(211, 211, 211, 0.25);
