fix responsive issue and center loader into register and login pages

--- a/src/app/commons/ContactAdmin/ContactAdmin.module.scss
+++ b/src/app/commons/ContactAdmin/ContactAdmin.module.scss
@@ -8,7 +8,9 @@
   text-align: center;
   background: $primary;
   border-radius: $border-radius-large;
-  color: #fff;
+  p {
+    color: #fff;
+  }
 }
 .title {
   color:#fff !important;
