--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -34,7 +34,7 @@ $button-fs:       14px;   // text button
 // background
 
 $light-grey-bg: #F6F6F6;   
-$light-blue-bg       : #F9FCFF;             
+$light-blue-bg: #F9FCFF;             
 
 // primary 
 
@@ -62,7 +62,7 @@ $error-ultraSoft: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255,
 
 // success
 
-$succes:          #29B95F;
+$success:          #29B95F;
 $success-soft:      linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), #29B95F;
 $success-ultraSoft: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), #54C77F;
 
