--- a/src/app/commons/MachineCard/MachineCard.module.scss
+++ b/src/app/commons/MachineCard/MachineCard.module.scss
@@ -1,21 +1,35 @@
 @import "src/app/styles/_global.scss";
 
 .container {
-  @include d-flex(row, center, flex-end, 40px);
-  padding: 20px 40px;
+  @include d-flex(column, center, center, 20px);
+  padding: 20px 20px;
   background-color: #fff;
   box-shadow: 0px 0px 20px rgba(211, 211, 211, 0.25);
   border-radius: $border-radius-large;
+
+  @include sm {
+    flex-direction: row;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
 }
 
 .info {
-  @include d-flex(column, flex-start, flex-start, .5rem);
+  @include d-flex(column, center, center, .5rem);
+  @include sm {
+    align-items: flex-start;
+  }
   &__buttons {
     @include d-flex(row, flex-start, center, 1rem);
   }
 }
 
 .machineImg {
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
+
+  @include sm {
+    width:120px;
+    height:120px;
+  }
 }
