--- a/src/app/commons/RegisterForm/RegisterForm.module.scss
+++ b/src/app/commons/RegisterForm/RegisterForm.module.scss
@@ -5,3 +5,20 @@
   @include d-grid(1fr, auto, 1rem)
 }
 
+select {
+  -webkit-appearance:     none;
+  -moz-appearance:        none;
+  appearance:             none;
+  display:        inline-block;
+  padding:        .8rem 3rem .8rem 2rem;
+  cursor:         pointer;
+  color:          $primary;
+  @include body-bold;
+  border:         1px solid $primary;
+  border-radius:  .2em;
+  background-color:     #fff;
+  background-image: url("../../assets/img/arrow-down-dropdown.svg");
+  background-size: .8em;
+  background-repeat: no-repeat;
+  background-position: calc(100% - 1rem) center;
+}
