add indicator light on machine card and machine profile

--- a/src/app/pages/Register/Register.module.scss
+++ b/src/app/pages/Register/Register.module.scss
@@ -31,6 +31,7 @@
 
 .success {
   @include d-flex(row, center, center, .5rem);
+  height: fit-content;
   padding: 1rem;
   border-radius: $border-radius-small;
   background-color: $success;
