--- a/src/app/commons/MachineCard/MachineCard.module.scss
+++ b/src/app/commons/MachineCard/MachineCard.module.scss
@@ -22,6 +22,16 @@
   &__buttons {
     @include d-flex(row, flex-start, center, 1rem);
   }
+  &__state {
+    @include d-flex(row, null, center, .5rem);
+    span {
+      display: block;
+      height:1rem;
+      width: 1rem;
+      // background-color : $error;
+      border-radius: 50%;
+    }
+  }
 }
 
 .machineImg {
