--- a/src/app/pages/MachineProfile/MachineProfile.module.scss
+++ b/src/app/pages/MachineProfile/MachineProfile.module.scss
@@ -36,4 +36,15 @@
     width: 120px;
   height: 120px;
   }
+  &__state {
+    @include d-flex(row, null, center, .5rem);
+    margin-left: auto;
+    span {
+      display: block;
+      height:1rem;
+      width: 1rem;
+      // background-color : $error;
+      border-radius: 50%;
+    }
+  }
 }
