--- a/src/app/commons/Header/Header.module.scss
+++ b/src/app/commons/Header/Header.module.scss
@@ -8,6 +8,7 @@
   background-color: #fff;
   box-shadow: 0px 0px 20px rgba(211, 211, 211, 0.25);
   position: fixed;
+  z-index: 2;
 }
 
 .navContainer {
